# nndescent-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
nndescent-demo/: Cargo.toml
nndescent-demo/src/: main.rs
nndescent-math/: Cargo.toml
nndescent-math-benchmarks/: Cargo.toml
nndescent-math-benchmarks/src/: main.rs
nndescent-math/src/: avx2.rs  lib.rs  math.rs  scalar.rs
scripts/: asm.py  get-dataset.py  perf_test.py
src/: distances.rs  lib.rs  rp_trees.rs  utils.rs
