[package]
name = "nndescent-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hdf5 = "0.8.1"
tracing-subscriber = "0.3.17"

nndescent = { path = "..", features = ["tracing"] }

[features]
fast-math = ["nndescent/fast-math"]
